# AmeCapture

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  AmeCapture.sln  AmeCapture.slnx  Directory.Build.props  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.gemini/: styleguide.md
.husky/: pre-commit
AmeCapture.App/: AmeCapture.App.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
AmeCapture.Application/: AmeCapture.Application.csproj
AmeCapture.Domain/: AmeCapture.Domain.csproj
docs/: 5. DBスキーマ解析とC#移行互換方針.md  (+7 more)
src-tauri/: Cargo.toml  FROZEN.md  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: app_state.rs  error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/capture/: mod.rs  region.rs  screen.rs  window.rs
src-tauri/src/commands/: capture.rs  editor.rs  log.rs  mod.rs  settings.rs  storage.rs  tag.rs  workspace.rs
src-tauri/src/config/: app_settings.rs  mod.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/editor/: history.rs  mod.rs  tools.rs
src-tauri/src/models/: capture.rs  mod.rs  tag.rs  workspace_item.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/repositories/: mod.rs  settings.rs  tag.rs  workspace.rs
src-tauri/src/services/: capture.rs  editor.rs  mod.rs  settings.rs  storage.rs  tag.rs  thumbnail.rs  workspace.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/utils/: error.rs
src-tauri/src/workspace/: models.rs  service.rs
(+167 files in other folders)
